✨ GET /user/homes Done
