# api_doc.yaml
@@ -111,6 +111,104 @@ paths:
         '422':
           description: Validation error. Username already taken, short password...
 
+  /user/homes:
+    get:
+      summary: Get all houses of the authenticated user.
+      description: Get all houses that owns the authenticated user. Requires authentication.
+      tags:
+        - user
+        - home
+
+      security:
+        - bearerAuth: []
+
+      responses:
+        '200':
+          description: Return user's houses.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                          example: 1
+                        user_id:
+                          type: integer
+                          example: 1
+                        name:
+                          type: string
+                          example: Mansion
+                        address:
+                          type: string
+                          example: Melon Street 2
+                        description:
+                          type: string
+                          example: House with garden!
+                  links:
+                    type: object
+                    properties:
+                      first:
+                        type: string
+                        example: http://127.0.0.1:8000/homes?page=4
+                      last:
+                        type: string
+                        example: http://127.0.0.1:8000/homes?page=13
+                      prev:
+                        type: string
+                        example: http://127.0.0.1:8000/homes?page=3
+                      next:
+                        type: string
+                        example: http://127.0.0.1:8000/homes?page=5
+                  meta:
+                    type: object
+                    properties:
+                      current_page:
+                        type: integer
+                        example: 3
+                      from:
+                        type: integer
+                        example: 2
+                      last_page:
+                        type: integer
+                        example: 13
+                      links:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+
+                            url:
+                              type: string
+                              example: http://127.0.0.1:8000/homes?page=3
+                            label:
+                              type: integer
+                              example: 3
+                            active:
+                              type: boolean
+                              example: true
+                  path:
+                    type: string
+                    example: http://127.0.0.1:8000/homes
+                  per_page:
+                    type: integer
+                    example: 10
+                  to:
+                    type: integer
+                    example: 4
+                  total:
+                    type: integer
+                    example: 130
+        '401':
+          description: Requires authentication
+
+
+
   /homes:
     post:
       tags:
